test/Fail/Issue8580.err
Issue8580.agda:6.11-12: error: [UnusedVariableInPatternSynonym]
Unused variable in pattern synonym: _
when scope checking the declaration
  pattern S _ = Set
